@@ -1,10 +1,13 @@
-package io.github.htshame.rule.processor;
+package io.github.htshame.rule.processor.yaml;
 
 import io.github.htshame.change.set.ChangeSetElement;
+import io.github.htshame.enums.ChangeLogFormatEnum;
 import io.github.htshame.enums.RuleEnum;
 import io.github.htshame.exception.ChangeLogParseException;
 import io.github.htshame.exception.ExclusionParserException;
 import io.github.htshame.exception.ValidationException;
+import io.github.htshame.rule.processor.AttrStartsWithProcessor;
+import io.github.htshame.rule.processor.RuleProcessorTestUtil;
 import io.github.htshame.util.parser.ExclusionParser;
 import org.junit.Test;
 import org.w3c.dom.Element;
@@ -15,30 +18,28 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
 
-public class TagMustExistTest extends RuleProcessorTestUtil {
+public class AttrStartsWithProcessorYamlTest extends RuleProcessorTestUtil {
 
     private static final String BASE_FILE_PATH =
-            "src/test/resources/io/github/htshame/rule/processor/tag-must-exist/";
-    private static final String RULE_URL = BASE_FILE_PATH + "tag-must-exist-rule.xml";
+            "src/test/resources/io/github/htshame/rule/processor/attr-starts-with/";
+    private static final String RULE_URL = BASE_FILE_PATH + "attr-starts-with-rule.xml";
     private static final String EXCLUSION_EMPTY_URL = BASE_FILE_PATH + "exclusions_empty.xml";
-    private static final String EXCLUSION_URL = BASE_FILE_PATH + "exclusions.xml";
-    private static final String EXCLUSION_WRONG_URL = BASE_FILE_PATH + "exclusions_wrong.xml";
-    private static final String TAG_MUST_EXIST_FAILURE_XML = "tag-must-exist-failure.xml";
-    private static final String TAG_MUST_EXIST_SUCCESS_XML = "tag-must-exist-success.xml";
-    private static final int EXPECTED_NUMBER_OF_ERRORS = 3;
-
+    private static final String EXCLUSION_WRONG_URL = BASE_FILE_PATH + "exclusions_wrong_yaml.xml";
+    private static final String EXCLUSION_URL = BASE_FILE_PATH + "exclusions_yaml.xml";
+    private static final String ATTR_STARTS_WITH_FAILURE = "attr-starts-with-failure.yaml";
+    private static final String ATTR_STARTS_WITH_SUCCESS = "attr-starts-with-success.yaml";
 
     /**
      * Default constructor.
      */
-    public TagMustExistTest() {
-        super(RULE_URL, RuleEnum.TAG_MUST_EXIST);
+    public AttrStartsWithProcessorYamlTest() {
+        super(RULE_URL, RuleEnum.ATTRIBUTE_STARTS_WITH);
     }
 
     /**
@@ -50,10 +51,10 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
         Element ruleElement = prepareRuleELement();
 
         // act
-        RuleEnum actual = TagMustExistProcessor.instantiate(ruleElement).getName();
+        RuleEnum actual = AttrStartsWithProcessor.instantiate(ruleElement).getName();
 
         // assert
-        assertEquals(RuleEnum.TAG_MUST_EXIST, actual);
+        assertEquals(RuleEnum.ATTRIBUTE_STARTS_WITH, actual);
     }
 
     /**
@@ -67,36 +68,32 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + TAG_MUST_EXIST_FAILURE_XML);
+                BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE,
+                ChangeLogFormatEnum.YAML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
         List<String> expectedErrorMessages = Arrays.asList(
                 prepareTestErrorMessage(
                         "changelog_02_3",
-                        "test1",
-                        List.of("Tag <changeSet> does not contain required tag <comment>")),
+                        "test",
+                        List.of("Key [createIndex]. Property indexName: "
+                                + "user_metadata_external_user_id_unique_idx must start with [idx_]")),
                 prepareTestErrorMessage(
                         "changelog_02_4",
-                        "test1",
-                        List.of(
-                                "Tag <changeSet> does not contain required tag <comment>",
-                                "Tag <rollback> does not contain required tag <comment>")),
-                prepareTestErrorMessage(
-                        "changelog_02_5",
-                        "test1",
-                        List.of(
-                                "Tag <changeSet>. Required child tag <comment> can not be empty",
-                                "Tag <rollback>. Required child tag <comment> can not be empty")));
+                        "test",
+                        List.of("Key [createIndex]. Property indexName: "
+                                + "1id_user_metadata_external_user_id_unique_idx must start with [idx_]")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                TagMustExistProcessor.instantiate(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        TAG_MUST_EXIST_FAILURE_XML);
+                        ATTR_STARTS_WITH_FAILURE,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 exceptionCount++;
                 actualErrorMessages.add(e.getMessage());
@@ -104,10 +101,8 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
         }
 
         // assert
-        assertEquals(EXPECTED_NUMBER_OF_ERRORS, exceptionCount);
-        for (int i = 0; i < expectedErrorMessages.size(); i++) {
-            assertEquals(expectedErrorMessages.get(i), actualErrorMessages.get(i));
-        }
+        assertEquals(2, exceptionCount);
+        assertErrors(expectedErrorMessages, actualErrorMessages);
     }
 
     /**
@@ -121,36 +116,32 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + TAG_MUST_EXIST_FAILURE_XML);
+                BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE,
+                ChangeLogFormatEnum.YAML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_WRONG_URL));
         List<String> expectedErrorMessages = Arrays.asList(
                 prepareTestErrorMessage(
                         "changelog_02_3",
-                        "test1",
-                        List.of("Tag <changeSet> does not contain required tag <comment>")),
+                        "test",
+                        List.of("Key [createIndex]. Property indexName: "
+                                + "user_metadata_external_user_id_unique_idx must start with [idx_]")),
                 prepareTestErrorMessage(
                         "changelog_02_4",
-                        "test1",
-                        List.of(
-                                "Tag <changeSet> does not contain required tag <comment>",
-                                "Tag <rollback> does not contain required tag <comment>")),
-                prepareTestErrorMessage(
-                        "changelog_02_5",
-                        "test1",
-                        List.of(
-                                "Tag <changeSet>. Required child tag <comment> can not be empty",
-                                "Tag <rollback>. Required child tag <comment> can not be empty")));
+                        "test",
+                        List.of("Key [createIndex]. Property indexName: "
+                                + "1id_user_metadata_external_user_id_unique_idx must start with [idx_]")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                TagMustExistProcessor.instantiate(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        TAG_MUST_EXIST_FAILURE_XML);
+                        ATTR_STARTS_WITH_FAILURE,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 exceptionCount++;
                 actualErrorMessages.add(e.getMessage());
@@ -158,8 +149,8 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
         }
 
         // assert
-        assertEquals(EXPECTED_NUMBER_OF_ERRORS, exceptionCount);
-        assertTrue(expectedErrorMessages.containsAll(actualErrorMessages));
+        assertEquals(2, exceptionCount);
+        assertErrors(expectedErrorMessages, actualErrorMessages);
     }
 
     /**
@@ -173,32 +164,27 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + TAG_MUST_EXIST_FAILURE_XML);
+                BASE_FILE_PATH + ATTR_STARTS_WITH_FAILURE,
+                ChangeLogFormatEnum.YAML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_URL));
-        List<String> expectedErrorMessages = List.of(
+        List<String> expectedErrorMessages = Collections.singletonList(
                 prepareTestErrorMessage(
                         "changelog_02_4",
-                        "test1",
-                        List.of(
-                                "Tag <changeSet> does not contain required tag <comment>",
-                                "Tag <rollback> does not contain required tag <comment>")),
-                prepareTestErrorMessage(
-                        "changelog_02_5",
-                        "test1",
-                        List.of(
-                                "Tag <changeSet>. Required child tag <comment> can not be empty",
-                                "Tag <rollback>. Required child tag <comment> can not be empty")));
+                        "test",
+                        List.of("Key [createIndex]. Property indexName: "
+                                + "1id_user_metadata_external_user_id_unique_idx must start with [idx_]")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                TagMustExistProcessor.instantiate(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        TAG_MUST_EXIST_FAILURE_XML);
+                        ATTR_STARTS_WITH_FAILURE,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 exceptionCount++;
                 actualErrorMessages.add(e.getMessage());
@@ -206,8 +192,8 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
         }
 
         // assert
-        assertEquals(2, exceptionCount);
-        assertTrue(expectedErrorMessages.containsAll(actualErrorMessages));
+        assertEquals(1, exceptionCount);
+        assertErrors(expectedErrorMessages, actualErrorMessages);
     }
 
     /**
@@ -221,7 +207,8 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + TAG_MUST_EXIST_SUCCESS_XML);
+                BASE_FILE_PATH + ATTR_STARTS_WITH_SUCCESS,
+                ChangeLogFormatEnum.YAML);
         boolean isExceptionThrown = false;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
@@ -229,10 +216,11 @@ public class TagMustExistTest extends RuleProcessorTestUtil {
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                TagMustExistProcessor.instantiate(ruleElement).validate(
+                AttrStartsWithProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        TAG_MUST_EXIST_SUCCESS_XML);
+                        ATTR_STARTS_WITH_SUCCESS,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 isExceptionThrown = true;
             }
