@@ -1,10 +1,13 @@
-package io.github.htshame.rule.processor;
+package io.github.htshame.rule.processor.yaml;
 
 import io.github.htshame.change.set.ChangeSetElement;
+import io.github.htshame.enums.ChangeLogFormatEnum;
 import io.github.htshame.enums.RuleEnum;
 import io.github.htshame.exception.ChangeLogParseException;
 import io.github.htshame.exception.ExclusionParserException;
 import io.github.htshame.exception.ValidationException;
+import io.github.htshame.rule.processor.RuleProcessorTestUtil;
+import io.github.htshame.rule.processor.TagMustExistProcessor;
 import io.github.htshame.util.parser.ExclusionParser;
 import org.junit.Test;
 import org.w3c.dom.Element;
@@ -15,28 +18,29 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
 
-public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
+public class TagMustExistYamlTest extends RuleProcessorTestUtil {
 
-    private static final String BASE_FILE_PATH = "src/test/resources/io/github/htshame/rule/processor/attr-ends-with/";
-    private static final String RULE_URL = BASE_FILE_PATH + "attr-ends-with-rule.xml";
+    private static final String BASE_FILE_PATH =
+            "src/test/resources/io/github/htshame/rule/processor/tag-must-exist/";
+    private static final String RULE_URL = BASE_FILE_PATH + "tag-must-exist-rule.xml";
     private static final String EXCLUSION_EMPTY_URL = BASE_FILE_PATH + "exclusions_empty.xml";
-    private static final String EXCLUSION_WRONG_URL = BASE_FILE_PATH + "exclusions_wrong.xml";
-    private static final String EXCLUSION_URL = BASE_FILE_PATH + "exclusions.xml";
-    private static final String ATTR_ENDS_WITH_FAILURE_XML = "attr-ends-with-failure.xml";
-    private static final String ATTR_ENDS_WITH_SUCCESS_XML = "attr-ends-with-success.xml";
+    private static final String EXCLUSION_URL = BASE_FILE_PATH + "exclusions_yaml.xml";
+    private static final String EXCLUSION_WRONG_URL = BASE_FILE_PATH + "exclusions_wrong_yaml.xml";
+    private static final String TAG_MUST_EXIST_FAILURE = "tag-must-exist-failure.yaml";
+    private static final String TAG_MUST_EXIST_SUCCESS = "tag-must-exist-success.yaml";
+    private static final int EXPECTED_NUMBER_OF_ERRORS = 3;
+
 
     /**
      * Default constructor.
      */
-    public AttrEndsWithProcessorTest() {
-        super(RULE_URL, RuleEnum.ATTRIBUTE_ENDS_WITH);
+    public TagMustExistYamlTest() {
+        super(RULE_URL, RuleEnum.TAG_MUST_EXIST);
     }
 
     /**
@@ -48,10 +52,10 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
         Element ruleElement = prepareRuleELement();
 
         // act
-        RuleEnum actual = AttrEndsWithProcessor.instantiate(ruleElement).getName();
+        RuleEnum actual = TagMustExistProcessor.instantiate(ruleElement).getName();
 
         // assert
-        assertEquals(RuleEnum.ATTRIBUTE_ENDS_WITH, actual);
+        assertEquals(RuleEnum.TAG_MUST_EXIST, actual);
     }
 
     /**
@@ -65,30 +69,38 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML);
+                BASE_FILE_PATH + TAG_MUST_EXIST_FAILURE,
+                ChangeLogFormatEnum.YAML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
         List<String> expectedErrorMessages = Arrays.asList(
                 prepareTestErrorMessage(
-                        "changelog_02_1",
-                        "test",
-                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                                + "but found: [fk_user_activation_user_profile_id_user_profile_id]")),
+                        "changelog_02_3",
+                        "test1",
+                        List.of("Key [changeSet]. Required nested property [comment] is missing or empty")),
                 prepareTestErrorMessage(
-                        "changelog_02_2",
-                        "test",
-                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                                + "but found: [user_activation_user_profile_id_user_profile_id_FK]")));
+                        "changelog_02_4",
+                        "test1",
+                        List.of(
+                                "Key [changeSet]. Required nested property [comment] is missing or empty",
+                                "Key [rollback]. Required nested property [comment] is missing or empty")),
+                prepareTestErrorMessage(
+                        "changelog_02_5",
+                        "test1",
+                        List.of(
+                                "Key [changeSet]. Required nested property [comment] is missing or empty",
+                                "Key [rollback]. Required nested property [comment] is missing or empty")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                AttrEndsWithProcessor.instantiate(ruleElement).validate(
+                TagMustExistProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        ATTR_ENDS_WITH_FAILURE_XML);
+                        TAG_MUST_EXIST_FAILURE,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 exceptionCount++;
                 actualErrorMessages.add(e.getMessage());
@@ -96,8 +108,10 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
         }
 
         // assert
-        assertEquals(2, exceptionCount);
-        assertTrue(expectedErrorMessages.containsAll(actualErrorMessages));
+        assertEquals(EXPECTED_NUMBER_OF_ERRORS, exceptionCount);
+        for (int i = 0; i < expectedErrorMessages.size(); i++) {
+            assertEquals(expectedErrorMessages.get(i), actualErrorMessages.get(i));
+        }
     }
 
     /**
@@ -111,30 +125,38 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML);
+                BASE_FILE_PATH + TAG_MUST_EXIST_FAILURE,
+                ChangeLogFormatEnum.YAML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_WRONG_URL));
         List<String> expectedErrorMessages = Arrays.asList(
                 prepareTestErrorMessage(
-                        "changelog_02_1",
-                        "test",
-                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                                + "but found: [fk_user_activation_user_profile_id_user_profile_id]")),
+                        "changelog_02_3",
+                        "test1",
+                        List.of("Key [changeSet]. Required nested property [comment] is missing or empty")),
                 prepareTestErrorMessage(
-                        "changelog_02_2",
-                        "test",
-                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                                + "but found: [user_activation_user_profile_id_user_profile_id_FK]")));
+                        "changelog_02_4",
+                        "test1",
+                        List.of(
+                                "Key [changeSet]. Required nested property [comment] is missing or empty",
+                                "Key [rollback]. Required nested property [comment] is missing or empty")),
+                prepareTestErrorMessage(
+                        "changelog_02_5",
+                        "test1",
+                        List.of(
+                                "Key [changeSet]. Required nested property [comment] is missing or empty",
+                                "Key [rollback]. Required nested property [comment] is missing or empty")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                AttrEndsWithProcessor.instantiate(ruleElement).validate(
+                TagMustExistProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        ATTR_ENDS_WITH_FAILURE_XML);
+                        TAG_MUST_EXIST_FAILURE,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 exceptionCount++;
                 actualErrorMessages.add(e.getMessage());
@@ -142,8 +164,8 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
         }
 
         // assert
-        assertEquals(2, exceptionCount);
-        assertTrue(expectedErrorMessages.containsAll(actualErrorMessages));
+        assertEquals(EXPECTED_NUMBER_OF_ERRORS, exceptionCount);
+        assertErrors(expectedErrorMessages, actualErrorMessages);
     }
 
     /**
@@ -157,25 +179,34 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + ATTR_ENDS_WITH_FAILURE_XML);
+                BASE_FILE_PATH + TAG_MUST_EXIST_FAILURE,
+                ChangeLogFormatEnum.YAML);
         int exceptionCount = 0;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_URL));
-        List<String> expectedErrorMessages = Collections.singletonList(
+        List<String> expectedErrorMessages = List.of(
                 prepareTestErrorMessage(
-                        "changelog_02_2",
-                        "test",
-                        List.of("Tag <addForeignKeyConstraint> must have constraintName ending with [_fk], "
-                                + "but found: [user_activation_user_profile_id_user_profile_id_FK]")));
+                        "changelog_02_4",
+                        "test1",
+                        List.of(
+                                "Key [changeSet]. Required nested property [comment] is missing or empty",
+                                "Key [rollback]. Required nested property [comment] is missing or empty")),
+                prepareTestErrorMessage(
+                        "changelog_02_5",
+                        "test1",
+                        List.of(
+                                "Key [changeSet]. Required nested property [comment] is missing or empty",
+                                "Key [rollback]. Required nested property [comment] is missing or empty")));
         List<String> actualErrorMessages = new ArrayList<>();
 
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                AttrEndsWithProcessor.instantiate(ruleElement).validate(
+                TagMustExistProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        ATTR_ENDS_WITH_FAILURE_XML);
+                        TAG_MUST_EXIST_FAILURE,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 exceptionCount++;
                 actualErrorMessages.add(e.getMessage());
@@ -183,8 +214,8 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
         }
 
         // assert
-        assertEquals(1, exceptionCount);
-        assertTrue(expectedErrorMessages.containsAll(actualErrorMessages));
+        assertEquals(2, exceptionCount);
+        assertErrors(expectedErrorMessages, actualErrorMessages);
     }
 
     /**
@@ -198,7 +229,8 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
             ChangeLogParseException {
         // arrange
         List<ChangeSetElement> changeSetElements = parseChangeSetFile(
-                BASE_FILE_PATH + ATTR_ENDS_WITH_SUCCESS_XML);
+                BASE_FILE_PATH + TAG_MUST_EXIST_SUCCESS,
+                ChangeLogFormatEnum.YAML);
         boolean isExceptionThrown = false;
         Element ruleElement = prepareRuleELement();
         ExclusionParser exclusionParser = ExclusionParser.parseExclusions(new File(EXCLUSION_EMPTY_URL));
@@ -206,10 +238,11 @@ public class AttrEndsWithProcessorTest extends RuleProcessorTestUtil {
         // act
         for (ChangeSetElement changeSetElement : changeSetElements) {
             try {
-                AttrEndsWithProcessor.instantiate(ruleElement).validate(
+                TagMustExistProcessor.instantiate(ruleElement).validate(
                         changeSetElement,
                         exclusionParser,
-                        ATTR_ENDS_WITH_SUCCESS_XML);
+                        TAG_MUST_EXIST_SUCCESS,
+                        ChangeLogFormatEnum.YAML);
             } catch (ValidationException e) {
                 isExceptionThrown = true;
             }
